gccida/g0/protect_from_queue
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:827:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+4Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:833:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( x[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:837:47: error: use of undeclared identifier 'machine_mode'
x[1].fld[0].rtwint = ( __int64)gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:838:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:864:45: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( new0 != x->fld[0].rtx || new1 != ( rtx)x[1] ) 
                                            ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:877:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( y[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:879:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/expr.c:880:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)y[1]; 
                         ^~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/protect_from_queue/src/obj/expr.o] Error 1
